--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# Images_Positioning_Activity
+<!--Images_Positioning_Activity-->
 
 <!DOCTYPE html>
 <html>
@@ -7,6 +7,8 @@
   </head>
 
   <body>
-    
+    <blockquote>Let Your Web Site Do Your Work
+ You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
+    </lockquote>
   </body>
 </html>
