--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <html>
   <head>
     <title>Web Entrepreneurs</title>
+    <link rel="stylesheet" href="exam.css">
   </head>
 
   <body>
-    <blockquote>Let Your Web Site Do Your Work
- You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
+    <blockquote>
+      Let Your Web Site Do Your Work <br>
+      You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
     </lockquote>
   </body>
 </html>
