--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
 
   <body>
-    <p>
+    <h1>Final Exam - Web Entrepreneurs</h1>
+    <p id="content">
       Let Your Web Site Do Your Work <br><br>
       You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
     </p>
@@ -44,6 +45,17 @@
         Put the Flash presentations on your home page so that the user has a choice of whether or not to view the Flash presentation.
       </p>
     </div>
-      
+
+    <div class="steve">
+      <blockquote>
+        <q>
+          Your time is limited, so don't waste it living someone else's life. 
+          Don't let the noise of others' opinions drown out your own inner voice.
+          And most important, have the courage to follow your heart and intuition.
+        </q><br>
+        Steve Jobs
+      </blockquote>
+    </div>
+    
   </body>
 </html>
