--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p id="content">
       Let Your Web Site Do Your Work <br><br>
       You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
-    </p>
+    </p><br>
 
     <div id="looks">
-      <h1>Looks Matter</h1>
+      <h1 class="heading">Looks Matter</h1>
       <p>
         If your site looks amateurish, you'll lose credibility with your customers. Avoid using blinking, flashing, scrolling, and crawling text. You're running a business Web site, not a carnival. 
         Choose a readable font in a size that's easy to read. 
@@ -28,7 +28,7 @@
     </div>
 
     <div id="tales">
-      <h1>Title Tales</h1>
+      <h1 class="heading">Title Tales</h1>
       <p>
         No, I'm not talking about titles such as Ms. or Mrs. and the like. 
         Search engines scan the title bar in their search for "hits." 
@@ -38,7 +38,7 @@
     </div>
 
     <div id="entertain">
-      <h1>Let Your Page Inform, not Entertain</h1>
+      <h1 class="heading>Let Your Page Inform, not Entertain</h1>
       <p>
         Flash is a technology that places interesting animations on a Web page. 
         Don't let your site have a Flash "splash page," whereby the visitor to your site has to click to first get past the Flash page in order to view your home page. 
