--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </p><br>
 
     <div id="looks">
-      <h1 class="align">Looks Matter</h1>
+      <h3 class="align">Looks Matter</h3>
       <p>
         If your site looks amateurish, you'll lose credibility with your customers. Avoid using blinking, flashing, scrolling, and crawling text. You're running a business Web site, not a carnival. 
         Choose a readable font in a size that's easy to read. 
@@ -28,7 +28,7 @@
     </div>
 
     <div id="tales">
-      <h1 class="align">Title Tales</h1>
+      <h3 class="align">Title Tales</h3>
       <p>
         No, I'm not talking about titles such as Ms. or Mrs. and the like. 
         Search engines scan the title bar in their search for "hits." 
@@ -38,7 +38,7 @@
     </div>
 
     <div id="entertain">
-      <h1 class="align">Let Your Page Inform, not Entertain</h1>
+      <h3 class="align">Let Your Page Inform, not Entertain</h3>
       <p>
         Flash is a technology that places interesting animations on a Web page. 
         Don't let your site have a Flash "splash page," whereby the visitor to your site has to click to first get past the Flash page in order to view your home page. 
@@ -58,7 +58,7 @@
     </div>
 
     <div id="attention">
-      <h1>Get Their Attention</h1>
+      <h3 class="heading">Get Their Attention</h3>
       <p>
         At the top of your page, state what your company can do for the customer. 
         Why are you the best? Why should the customer use your services? 
@@ -68,7 +68,7 @@
     </div>
 
     <div id="contact">
-      <h1>Let's Make Contact</h1>
+      <h3 class="heading">Let's Make Contact</h3>
       <p>
         Don't make the customer have to search for contact information. 
         That's a great way to kill a sale, not create one. 
