--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
         Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
       </p>
     </div>
+
+    <div>
+      <h3 class="heading">Get the Picture</h3>
+      <p>
+        Photos should be the right size (not more than 3 inches by 3 inches) and not be distorted. 
+        Your photos should not look like a fun house mirror. 
+        Background graphics should contrast with, not compete with, text. 
+        If you have a lot of photos, create thumbnail images (about 1 - 1 1/2 inches square) that link to larger-size images. 
+        Having the large images on separate pages means your home page will download faster. 
+        Also, pages with several large photos and little text look quite "old school" and amateurish 
+        – it looks as if you've got nothing to say, and that's the last thing you want to convey to your readers.
+      </p>
+    </div>
     
   </body>
 </html>
