--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="content>
+    <div id="content">
       
       <h1>Final Exam - Web Entrepreneurs</h1>
       <p id="content">
