--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p><br>
   
       <div id="looks">
-        <h3 class="align">Looks Matter</h3>
+        <h3>Looks Matter</h3>
         <p>
           If your site looks amateurish, you'll lose credibility with your customers. Avoid using blinking, flashing, scrolling, and crawling text. You're running a business Web site, not a carnival. 
           Choose a readable font in a size that's easy to read. 
@@ -30,7 +30,7 @@
       </div>
   
       <div id="tales">
-        <h3 class="align">Title Tales</h3>
+        <h3>Title Tales</h3>
         <p>
           No, I'm not talking about titles such as Ms. or Mrs. and the like. 
           Search engines scan the title bar in their search for "hits." 
@@ -40,7 +40,7 @@
       </div>
   
       <div id="entertain">
-        <h3 class="align">Let Your Page Inform, not Entertain</h3>
+        <h3>Let Your Page Inform, not Entertain</h3>
         <p>
           Flash is a technology that places interesting animations on a Web page. 
           Don't let your site have a Flash "splash page," whereby the visitor to your site has to click to first get past the Flash page in order to view your home page. 
