--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </p>
       </div>
   
-      <div>
+      <div id="picture">
         <h3 class="heading">Get the Picture</h3>
         <p>
           Photos should be the right size (not more than 3 inches by 3 inches) and not be distorted. 
