--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
           – it looks as if you've got nothing to say, and that's the last thing you want to convey to your readers.
         </p>
       </div>
+
+      <div id="compete">
+        <h3 class="heading">How Will You Compete?</h3>
+        <p>
+          Decide early on how you will differentiate yourself from others — price, selection, expertise, 
+          market niche, uniqueness, speed of delivery, unique knowledge of the subject matter — 
+          all of these aspects are important in starting a business and staying in business. 
+          For more information, we invite you to visit our office Monday through Friday from 8 a.m. to 4 p.m. <br><br>
+
+          Council on Entrepreneurship in the Americas <br><br>
+          23 Butler Blvd. <br><br>
+          Suite 400B <br><br>
+          Hamilton Creek, NJ 35688
+        </p>
+      </div>
       
     </div>
   </body>
