--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
           For more information, we invite you to visit our office Monday through Friday from 8 a.m. to 4 p.m. <br><br>
 
           Council on Entrepreneurship in the Americas <br><br>
-          23 Butler Blvd. <br><br>
-          Suite 400B <br><br>
-          Hamilton Creek, NJ 35688
+          23 Butler Blvd. Suite 400B Hamilton Creek, NJ 35688
         </p>
       </div>
       
