--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
-        <img src="scanner.png">
+        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMyPOCdrkHhtCoTSyqS0R_5_VsenuYAzbUKR3wkU97CSx4Z0deHv9dnyg0d7loGxDuLyfq7b4bWdajgPl98eJN6YVcNhgi9wMo8hDPyFbXDUKs=w2976-h2054">
       </div>
   
       <div id="contact">
