--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           Make these reasons clear from the start and at the top.
         </p>
         <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMyPOCdrkHhtCoTSyqS0R_5_
-          VsenuYAzbUKR3wkU97CSx4Z0deHv9dnyg0d7loGxDuLyfq7b4bWdajgPl98eJN6YVcNhgi9wMo8hDPyFbXDUKs
-          =w2976-h2054" id="scanner">
+          VsenuYAzbUKR3wkU97CSx4Z0deHv9dnyg0d7loGxDuLyfq7b4bWdajgPl98eJN6YVcNhgi9wMo8hDPyFbXDUKs=
+          w2976-h2054" id="scanner">
       </div>
   
       <div id="contact">
