--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
-        <img id="scanner" src="https://images.app.goo.gl/FRvTmowv21ob9EQ1A">
+        <img src="https://images.app.goo.gl/FRvTmowv21ob9EQ1A" height="100px" width="100px">
       </div>
   
       <div id="contact">
