--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
-        <img src="https://images.app.goo.gl/FRvTmowv21ob9EQ1A" id="scanner">
+        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMRn7OJUJoNXM1s2QjPixCz937oTelWoyrt5auffjkV0qbFQSpSWpI_TKcRY_
+          Dff7CLoTENWadZOJLq-9BlfAHeCaofbQFtBCo7qUL7niORs_o=w2066-h2054" alt="QR Code" id="scanner">
       </div>
   
       <div id="contact">
