--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
-        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMRn7OJUJoNXM1s2QjPixCz937oTelWoyrt5auffjkV0qbFQSpSWpI_TKcRY_
-          Dff7CLoTENWadZOJLq-9BlfAHeCaofbQFtBCo7qUL7niORs_o=w2066-h2054" alt="QR Code" id="scanner">
+        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMRn7OJUJoNXM1s2QjPixCz937oTel
+          Woyrt5auffjkV0qbFQSpSWpI_TKcRY_Dff7CLoTENWadZOJLq-9BlfAHeCaofbQFtBCo7qUL7niORs_o=w2066-h2054" 
+          alt="QR Code" id="scanner">
       </div>
   
       <div id="contact">
@@ -79,6 +80,7 @@
           Make sure your contact information is easy to find. 
           Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
         </p>
+        <img src="https://www.flaticon.com/free-icon/contact_1810705" alt="contact" id="contact image">
       </div>
   
       <div id="picture">
