--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
+        <img src="scanner.png" alt="QR Code" id="scanner">
       </div>
   
       <div id="contact">
