--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
           That's a great way to kill a sale, not create one. 
           Make sure your contact information is easy to find. 
           Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
+          <br>
         </p>
+
+        <a href="https://www.taehs.org/">Thomas A. Edison CTE High School</a>
+        <p>165-65 84th Avenue <br> Jamaica, NY 11432</p>
+        
       </div>
   
       <div id="picture">
