--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
           <br>
         </p>
 
-        <a href="https://www.taehs.org/">Thomas A. Edison CTE High School</a>
-        <p>165-65 84th Avenue <br> Jamaica, NY 11432</p>
+        <a href="https://www.taehs.org/" class="align">Thomas A. Edison CTE High School</a>
+        <p class="align">165-65 84th Avenue <br> Jamaica, NY 11432</p>
+        
         
       </div>
   
