--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
 
         <a href="https://www.taehs.org/" class="align">Thomas A. Edison CTE High School</a>
         <p class="align">165-65 84th Avenue <br> Jamaica, NY 11432</p>
-        <a href="https://github.com/JenniferL921" class="align">Jennifer Liu</a>
+        <a href="https://github.com/JenniferL921" class="align">
+          Jennifer Liu
+        <img src="contact image.png" alt="contact image" id="contactImage">
+        </a>
         
       </div>
   
