--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </p>
 
         <a href="https://www.taehs.org/" class="align" target="_blank">Thomas A. Edison CTE High School</a>
-        <p class="align">165-65 84th Avenue <br> Jamaica, NY 11432 <br> Jennifer Liu</p>
+        <p class="align">165-65 84th Avenue <br> Jamaica, NY 11432 <br><br> Jennifer Liu</p>
         
         <a href="https://github.com/JenniferL921" class="align" target="_blank">
         <img src="contact image.png" alt="contact image" id="contactImage">
