--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
           What makes you so special? Why should the customer buy your goods or use your services? 
           Make these reasons clear from the start and at the top.
         </p>
-        <img src="scanner.png" alt="QR Code" id="scanner">
+        <a href="https://www.amazon.com/" target="_blank">
+          <img src="scanner.png" alt="QR Code" id="scanner">
+        </a>
       </div>
   
       <div id="contact">
