--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="content">
       
-      <h1>Final Exam - Web Entrepreneurs</h1>
+      <h1 class="heading">Final Exam - Web Entrepreneurs</h1>
       <p>
         Let Your Web Site Do Your Work <br><br>
         You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:
