--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <br>
         </p>
 
-        <a href="https://www.taehs.org/" class="align" target="_blank">Thomas A. Edison CTE High School</a>
+        <a href="https://www.taehs.org/" align="middle" target="_blank">Thomas A. Edison CTE High School</a>
         <p class="align">165-65 84th Avenue <br> Jamaica, NY 11432 <br><br> Jennifer Liu</p>
         
         <a href="https://github.com/JenniferL921" class="align" target="_blank">
